# cryptography-practice

./: .gitignore  CMakeLists.txt
src/pseudorandom/: blumblumshub.cpp  blumblumshub.hpp  lfsr.cpp  lfsr.hpp  prng.cpp  prng.hpp
src/stream/: trivium.cpp  trivium.hpp
src/util/: bits.hpp
tests/: tests.cpp
